# PDF_RAG

./: README.md  config.py  pyproject.toml
app/: rag_chain.py  server.py
frontend/src/: App.tsx
importer/: load_and_process.py
