[tool.poetry]
name = "pythonProject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
uvicorn = "^0.34.0"
langserve = {extras = ["server"], version = ">=0.3.1"}
pydantic = "2.10.6"
tqdm = "^4.67.1"
unstructured = {extras = ["pdf"], version = "^0.16.23"}
langchain-experimental = "^0.3.4"
python-dotenv = "^1.0.1"
openai = "^1.9.0"
tiktoken = "^0.9.0"
psycopg = "3.2.5"
pgvector = "^0.3.6"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
